@@ -14,7 +14,7 @@ export(Hershey, as.graphicsAnnot, boxplot.stats, check.options, chull,
        CIDFont, col2rgb, colors, colours, cm, colorRamp,
        colorRampPalette, contourLines, convertColor, colorConverter,
        colorspaces, cm.colors, dev.control, dev.copy, dev.copy2eps,
-       dev.cur, dev.interactive, dev.list, dev.next, dev.off,
+       dev.cur, dev.interactive, dev.list, dev.new, dev.next, dev.off,
        dev.prev, dev.print, dev.set, dev2bitmap, deviceIsInteractive,
        embedFonts, extendrange, getGraphicsEvent, graphics.off, gray,
        grey, gray.colors, grey.colors, heat.colors, hsv, hcl,
